Landing menu and alignment fixes

--- a/src/app/components/landing/landing.scss
+++ b/src/app/components/landing/landing.scss
@@ -18,13 +18,32 @@ body.active {
   width: 25px;
   height: 3px;
   margin: 5px auto;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
   background-color: white;
 }
 
 .hamburger {
   display: none;
+}
+
+.logo-box {
+  background-color: $off_black;
+   width: 100%;
+   display: flex;
+   justify-content: center;
+   align-content: center;
+}
+.logo-box h1 {
+  color: white !important;
+  font-weight: 800 !important;
+  font-size: 50px;
+  padding: 15px;
+  text-align: left;
+}
+.card-text {
+  padding: 30px 50px;
+  align-self: center;
 }
 
 .navigation {
@@ -33,6 +52,13 @@ body.active {
   justify-content: space-between;
   width: auto;
   align-items: center;
+  padding: 6px 0% 6px 10%;
+}
+.display-none{
+  display: none !important;
+}
+.display-block{
+  display: block !important;
 }
 
 .new-landing-page {
@@ -47,13 +73,13 @@ body.active {
     color: $off_black;
   }
   h1{
-    font-size: 45px;
+    // font-size: 45px;
     line-height: 55px;
     margin:0px 0px;
   }
   h2{
-    font-size: 45px;
-    line-height: 45px;
+    font-size: 43px;
+    line-height: 40px;
     margin:0px 0px;
   }
   h3{
@@ -115,19 +141,25 @@ body.active {
     display: flex;
     flex-direction: row;
     flex-wrap:nowrap;
-    padding: 6px 10%;
-    width: 78%;
+    width: calc(100% - 20px);
     justify-content: space-between;
     align-items: center;
     background-color: $off_black;
-    // max-width: 1200px;
-    margin: 10px 1%;
-    border-radius: 5px;
-  }
+    margin: 10px 10px;
 
+  }
+  #get-your-kit {
+    scroll-margin-top: 80px;
+  }
   .lighter{
     max-width: 10%;
-    transition: 1s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    flex-direction: column;
+    padding: 5px;
+    opacity: 90%; 
+  }
+  .lighter:hover {
+    opacity: 100%;
   }
 
   .landing-menu {
@@ -137,6 +169,7 @@ body.active {
     width: fit-content;
     align-self: center;
     justify-content: space-between;
+    padding: 6px 10% 6px 0%;
   }
   // Images on landing page
   .img-new_sck{
@@ -193,6 +226,10 @@ body.active {
   .pd-60 {
     padding-top: 60px;
   }
+  .text-left{
+    text-align: left;
+    justify-content: left;
+  }
 
   // Video section
   .video-section{
@@ -215,7 +252,6 @@ body.active {
     bottom: 80px;
     max-width: 600px;
     width: 50%;
-    padding: 50px;
     background-color: rgb(255, 255, 255);
     border: 3px solid $off_black;
     img{
@@ -286,10 +322,7 @@ body.active {
 
   @media only screen and (max-width: 950px) {
     .sc-off-cta-platform {
-      // flex-direction: column;
       justify-self: center;
-      width: calc(100% - 100px);
-      padding: 10px 50px 10px 50px;
       align-self: start;
       align-items: start;
       text-align: left;
@@ -298,8 +331,8 @@ body.active {
       transition: all 0.3s ease-in-out;
 
       }
-    .navigation {
-      width: 100%;
+    .navigation.active {
+      padding: 16px 0% 6px 11%;
     }
     .external-links {
       display: flex;
@@ -308,6 +341,14 @@ body.active {
     .hamburger {
       display: block;
       cursor: pointer;
+      align-self: center;
+      padding: 6px 10% 6px 0%;
+    }
+    .hamburger.active {
+      display: block;
+      cursor: pointer;
+      align-self: center;
+      padding: 16px 11% 6px 0%;
     }
     .hamburger.active .bar:nth-child(2) {
       opacity: 0;
@@ -323,14 +364,17 @@ body.active {
       display: none;
       justify-content: space-between;
       width: 100%;
-      height: 80%;
+      height: 40%;
+      padding: 0px 10%;
     }
     .landing-menu.active {
       display: flex;
       align-self: start;
-      -webkit-transition: all 0.3s ease-in-out;
-      transition: all 0.3s ease-in-out;
+      -webkit-transition: all .3s ease-in-out;
+      transition: all .3s ease-in-out;
       flex-direction: column;
+      justify-content: space-between;
+      padding-bottom: 10%;
     }
     .landing-menu .md-button.landing-menu-btn {
       text-align: left;
@@ -342,13 +386,19 @@ body.active {
       justify-self: end;
     }
     .sc-off-cta-platform.active {
-      height: calc(100vh - 60px);
-      padding: 10px 50px 50px 50px;
-      -webkit-transition: all 0.3s ease-in-out;
-      transition: all 0.3s ease-in-out;
+      height: 100%;
+      width: 100%;
+      justify-content: space-between;
+      align-content: space-between;
+      -webkit-transition: all .3s ease-in-out;
+      transition: all .3s ease-in-out;
+      margin: 0%;
     }
     .sc-logo{
       padding: 10px 0px;
+    }
+    #get-your-kit {
+      scroll-margin-top: 85px;
     }
     .layout-xs-column {
      flex-direction: column;
@@ -404,14 +454,18 @@ body.active {
     }
     .text-left{
       text-align: center;
-    }
-    .align-left {
-      align-items: center;
+      justify-content: center;
     }
     .banner-section {
       height: 110vh;
       background: url("/assets/images/landing/smartcitizen-platform-mobile.jpg");
       background-position: 70% 40%;
+    }
+    .btn-justify-left{
+      margin-left: 8px;
+    }
+    .card-text {
+      text-align: center;
     }
 
     // Mobile remove padding and extra lines
@@ -447,8 +501,17 @@ body.active {
     .mr-30 {
       margin-right: 0px;
     }
+    .new-landing-page {
+      padding-bottom: 0px;
+      background-size: 0px;
+    }
+    .img-platform{
+      background: blue url("/assets/images/landing/smartcitizen-platform-mobile.jpg");
+      background-position: 70% bottom;
+    }
 
   }
+
   // Less then 750px
   @media only screen and (max-width: 750px) {
     h1{
@@ -460,6 +523,7 @@ body.active {
     .text-funding{
       text-align: center;
     }
+
   }
 
   @media only screen and (max-width: 600px) {
@@ -491,15 +555,13 @@ body.active {
       margin-top: 10px !important;
       margin-bottom: 10px !important;
     }
-    .sc-off-cta-platform {
-      width: calc(100% - 60px);
-      padding: 10px 30px 10px 30px;
-    }
-    .sc-off-cta-platform.active {
-      width: calc(100% - 60px);
-      height: calc(100vh - 110px);
-      padding: 10px 30px 100px 30px;
-    }
+    // .sc-off-cta-platform {
+    //   width: calc(100% - 60px);
+    //   padding: 10px 30px 10px 30px;
+    // }
+    // .sc-off-cta-platform.active {
+    //   padding: 10px 30px 100px 30px;
+    // }
     // .img-new_sck{
     //   background: blue url("/assets/images/sck_edu.jpg") center/cover;
     // }
@@ -517,14 +579,4 @@ body.active {
       height: 95vh;
     }
   }
-}
-@media only screen and (max-width: 950px) {
-.new-landing-page {
-  padding-bottom: 0px;
-  background-size: 0px;
-}
-.img-platform{
-  background: blue url("/assets/images/landing/smartcitizen-platform-mobile.jpg");
-  background-position: 70% bottom;
-}
 }
